# pciutils_vs

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.cn.md  lspci  lspci.8  pcilib.7  setpci  setpci.8  update-pciids  update-pciids.8
lib/: .gitignore  config.h  config.mk  libpci.pc
